# Bezier.hs

./: .gitignore  Bezier.hs  Bezier2d.hs  LICENSE  Main.hs  README.md  TODO  approaches.hs  bezier.js  bezier.pptx  index.html  stack.yaml
app/: Main.hs
bezier/: bezier.cabal
elm/: Bezier.elm  Cons.elm  Main.elm  elm-package.json
purescript/: bower.json
purescript/src/: Animation.js  Animation.purs  Bezier.purs  Main.purs  NonEmpty.purs
purescript/src/Data/NonEmpty/: Array.purs
src/: Bezier.hs
