name:                bezier
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/hrldcpr/bezier#readme
license:             BSD3
license-file:        LICENSE
author:              Harold Cooper
maintainer:          harold@x.st
copyright:           2016 Harold Cooper
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bezier
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable bezier-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bezier
                     , gloss
  default-language:    Haskell2010

test-suite bezier-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bezier
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hrldcpr/bezier
